# drilling-fluid

./: drilling_fluid_handbook_v6.md
yibccc-langchain/: .env.example  .gitignore  README.md  main.py  pyproject.toml  resume.md
yibccc-langchain/.claude/: CLAUDE.md  settings.json  settings.local.json
yibccc-langchain/benchmarks/: knowledge_import_benchmark.py
yibccc-langchain/docs/detailed-design/: AI诊断与RAG文档索引.md  drilling-fluid-diagnosis.md  knowledge-import-consumer.md  streaming-chat-api.md  处置Agent详细设计.md  接口文档-每阶段汇总.md
yibccc-langchain/docs/interview/: drilling-fluid-diagnosis.md  冷热分离.md
yibccc-langchain/docs/plans/: 2025-01-03-knowledge-rag-refactor-design.md  2025-01-03-knowledge-rag-refactor-implementation.md  2026-02-10-streaming-chat-api-design.md  2026-02-10-streaming-chat-implementation.md  2026-02-11-langgraph-checkpoint-implementation.md  2026-02-12-tool-call-display-design.md  2026-02-24-drilling-fluid-diagnosis-ai-design.md  2026-02-24-drilling-fluid-diagnosis-implementation.md  2026-03-03-knowledge-import-pgvector-design.md  2026-03-03-knowledge-import-pgvector-implementation-plan.md  2026-03-03-knowledge-import-pgvector-implementation.md  2026-03-03-knowledge-rag-refactor-design.md  2026-03-03-knowledge-rag-refactor-implementation.md  2026-03-12-ai-diagnosis-impl.md  2026-03-12-ai-diagnosis链路修复-design.md
yibccc-langchain/docs/sql/: 2026-02-27-migration-verification.md  diagnosis_schema.sql  (+5 more)
yibccc-langchain/scripts/: migrate_to_pgvector.py
yibccc-langchain/src/: __init__.py  config.py
yibccc-langchain/tests/: conftest.py  test_config.py
(+333 files in other folders)
